--- a/MFCApplication2/MFCApplication2.vcxproj
+++ b/MFCApplication2/MFCApplication2.vcxproj
@@ -185,6 +185,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CDialog_a.h" />
+    <ClInclude Include="CDialog_c.h" />
+    <ClInclude Include="CDialog_f.h" />
     <ClInclude Include="MFCApplication2.h" />
     <ClInclude Include="MFCApplication2Dlg.h" />
     <ClInclude Include="Resource.h" />
@@ -192,6 +195,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CDialog_a.cpp" />
+    <ClCompile Include="CDialog_c.cpp" />
+    <ClCompile Include="CDialog_f.cpp" />
     <ClCompile Include="MFCApplication2.cpp" />
     <ClCompile Include="MFCApplication2Dlg.cpp" />
     <ClCompile Include="stdafx.cpp">
