--- a/MFCApplication2/MFCApplication2.vcxproj
+++ b/MFCApplication2/MFCApplication2.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="CDialog_a.h" />
     <ClInclude Include="CDialog_c.h" />
     <ClInclude Include="CDialog_f.h" />
+    <ClInclude Include="CPaintGraph.h" />
     <ClInclude Include="MFCApplication2.h" />
     <ClInclude Include="MFCApplication2Dlg.h" />
     <ClInclude Include="Resource.h" />
@@ -198,6 +199,7 @@
     <ClCompile Include="CDialog_a.cpp" />
     <ClCompile Include="CDialog_c.cpp" />
     <ClCompile Include="CDialog_f.cpp" />
+    <ClCompile Include="CPaintGraph.cpp" />
     <ClCompile Include="MFCApplication2.cpp" />
     <ClCompile Include="MFCApplication2Dlg.cpp" />
     <ClCompile Include="stdafx.cpp">
